--- a/KeyVaultDemo8.csproj
+++ b/KeyVaultDemo8.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.13.2" />
     <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.json" Version="9.0.5" />
   </ItemGroup>
 
 </Project>
